--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,12 @@ dependencies {
 	implementation 'org.apache.kafka:kafka-streams'
 	//implementation 'org.springframework.cloud:spring-cloud-starter'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:8.0.0-alpha2'
+	implementation 'org.springframework.data:spring-data-redis:3.2.3'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.elasticsearch:elasticsearch-core:8.8.2'
 	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.8.2'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	annotationProcessor 'org.projectlombok:lombok'
