--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.kafka:kafka-streams'
-	//implementation 'org.springframework.cloud:spring-cloud-starter'
-	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.data:spring-data-redis:3.2.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.3'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.elasticsearch:elasticsearch-core:8.8.2'
 	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.8.2'
